--- a/parte1/postit.html
+++ b/parte1/postit.html
@@ -12,6 +12,44 @@
 </head>
 
 <body>
+    <main>
+        <div class="containerCard">
+            <div class="card"
+            id="cardOne">
+                <h2>task #1</h2>
+                <p>creare i postit</p>
+            </div>
+            <div class="card" id="cardTwo">
+                <h2>task #2</h2>
+                <p>Colorarli</p>
+            </div>
+            <div class="card" id="cardTree">
+                <h2>task #3</h2>
+                <p>Affiancati</p>
+            </div>
+            <div class="card" id="cardTwo" >
+                <h2>task #4</h2>
+                <p>Spaziarli</p>
+            </div>
+            <div class="card" id="cardOne">
+                <h2>task #5</h2>
+                <p>ombreggiarli</p>
+            </div>
+            <div class="card" id="cardTree">
+                <h2>task #6</h2>
+                <p>creare i postit</p>
+            </div>
+            <div class="card" id="cardOne">
+                <h2>task #7</h2>
+                <p>ruotarli</p>
+            </div>
+            <div class="card" id="cardTwo">
+                <h2>task #8</h2>
+                <p>animali</p>
+            </div>
+
+        </div>
+    </main>
 
 </body>
 </html>
